--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "http://jonahvsweb.com"
+  "homepage": "https://github.com/jonahvsweb/touchpoint-js"
 }
