--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A JavaScript library that visually shows taps/cicks on HTML prototypes",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-es2015": "6.24.1",
+    "grunt": "0.4.5",
+    "grunt-babel": "7.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.2",
