--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TouchPoint.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A JavaScript library that visually shows taps/cicks on HTML prototypes",
   "devDependencies": {
     "babel-core": "6.26.0",
@@ -11,6 +11,7 @@
     "grunt-babel": "7.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1"
   },
