--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "TouchPoint.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A JavaScript library that visually shows taps/cicks on HTML prototypes",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "babel-core": "6.26.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-es2015": "6.24.1",
+    "grunt": "0.4.5",
+    "grunt-babel": "7.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1"
   },
