--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-serve": "0.1.6"
   },
   "repository": {
     "type": "git",
