--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
+    "connect-livereload": "0.6.0",
     "grunt": "0.4.5",
     "grunt-babel": "7.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "1.0.2",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-serve": "0.1.6"
   },
   "repository": {
